Refactor helper dan restrukturisasi tampilan seller
- Gabungkan semua helper ke dalam satu file: app/Helpers.php
- Hapus file helper lama: cart_function.php, image_function.php, menu_function.php, order_function.php, user_function.php
- Update controller agar menggunakan helper baru
- Perbarui file migration: orders, food_items, cart, order_items
- Ganti nama view keranjang.blade.php menjadi cart.blade.php
- Restrukturisasi view seller:
  - Tambah: seller/category/{create,edit,index}.blade.php
  - Pindah: view menu ke folder seller/menu/
  - Hapus: seller/index.blade.php
- Update route di file web.php
- Update composer.json

--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,7 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Helper/cart_function.php",
-            "app/Helper/image_function.php",
-            "app/Helper/menu_function.php",
-            "app/Helper/order_function.php",
-            "app/Helper/user_function.php"
+            "app/Helpers.php"
         ]
     },
     "autoload-dev": {
